[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu_pausa/images/logo.png" type="Texture" id=1]
[ext_resource path="res://Fonts/New Innerspeaker Reguler.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu_pausa/Menu_pause.gd" type="Script" id=3]
[ext_resource path="res://Menu_pausa/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu_pausa/images/white.png" type="Texture" id=5]
[ext_resource path="res://Menu_pausa/shaders/blur.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/amount = 2.0

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 2 )

[node name="Menu_pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Menu_1" type="Control" parent="."]
anchor_right = 0.509
anchor_bottom = 1.0
margin_right = -0.216003
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu_1"]
anchor_left = 0.096
anchor_top = 0.127
anchor_right = 0.887
anchor_bottom = 0.272
margin_left = -0.0159988
margin_top = -0.200005
margin_right = -0.127014
margin_bottom = -0.200012
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="Control" parent="Menu_1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_continuar" type="Button" parent="Menu_1/buttons"]
anchor_left = 0.157
anchor_top = 0.343
anchor_right = 0.796
anchor_bottom = 0.462
margin_left = 0.202995
margin_top = -1.80002
margin_right = -0.716034
margin_bottom = -0.200012
custom_fonts/font = SubResource( 2 )
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_opcoes" type="Button" parent="Menu_1/buttons"]
anchor_left = 0.157
anchor_top = 0.518
anchor_right = 0.795
anchor_bottom = 0.64
margin_left = 0.202995
margin_top = 0.199982
margin_right = -0.195007
margin_bottom = -3.05176e-05
custom_fonts/font = SubResource( 2 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_sair" type="Button" parent="Menu_1/buttons"]
anchor_left = 0.157
anchor_top = 0.697
anchor_right = 0.795
anchor_bottom = 0.818
margin_left = 0.202995
margin_top = -0.200012
margin_right = -0.195007
margin_bottom = 0.199982
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_2" type="Control" parent="."]
visible = false
anchor_left = 0.49
anchor_right = 0.999
anchor_bottom = 1.0
margin_left = 0.23999
margin_right = 0.0239258
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sensibilidade" type="Control" parent="Menu_2"]
anchor_left = -0.006
anchor_top = 0.232
anchor_right = 1.0
anchor_bottom = 0.323
margin_left = -0.503944
margin_top = -0.829956
margin_right = -0.629944
margin_bottom = -0.429947
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu_2/Sensibilidade"]
anchor_right = 0.281
anchor_bottom = 0.382
margin_right = -0.244003
margin_bottom = -0.0100021
custom_fonts/font = SubResource( 3 )
text = "Sensibilidade"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_sensi" type="Label" parent="Menu_2/Sensibilidade"]
anchor_left = 0.048
anchor_top = 0.434
anchor_right = 0.149
anchor_bottom = 0.836
margin_left = -0.151997
margin_top = 0.129993
margin_right = -0.0759964
margin_bottom = 0.0199852
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Menu_2/Sensibilidade"]
anchor_left = 0.174
anchor_top = 0.326
anchor_right = 0.896
anchor_bottom = 0.909
margin_left = -0.175995
margin_top = 0.069994
margin_right = 0.496033
margin_bottom = 0.00498581
min_value = 0.1
max_value = 3.0
step = 0.1
value = 3.0

[node name="sombra" type="Control" parent="Menu_2"]
anchor_left = -0.00575816
anchor_top = 0.328333
anchor_right = 1.0
anchor_bottom = 0.42
margin_top = -1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Menu_2/sombra"]
anchor_right = 0.281
anchor_bottom = 0.382
margin_right = -0.244003
margin_bottom = -0.0100021
custom_fonts/font = SubResource( 3 )
text = "Sombra"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Menu_2/sombra"]
anchor_left = 0.061
anchor_top = 0.4
anchor_right = 0.891
anchor_bottom = 0.964
margin_left = 0.0360012
margin_top = -8.01086e-05
margin_right = 0.116028
margin_bottom = -0.020195
text = "Low"
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grass_distance" type="Control" parent="Menu_2"]
anchor_left = -0.00575816
anchor_top = 0.433333
anchor_right = 1.0
anchor_bottom = 0.525
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Menu_2/grass_distance"]
anchor_right = 0.281
anchor_bottom = 0.382
margin_right = -0.244003
margin_bottom = -0.0100021
custom_fonts/font = SubResource( 3 )
text = "View Distance"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_v_distance" type="Label" parent="Menu_2/grass_distance"]
anchor_left = 0.063
anchor_top = 0.455
anchor_right = 0.137
anchor_bottom = 0.836
margin_left = -0.0824318
margin_top = -0.0250835
margin_right = 0.141571
margin_bottom = 0.0198441
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider_v_distance" type="HSlider" parent="Menu_2/grass_distance"]
anchor_left = 0.176
anchor_top = 0.326
anchor_right = 0.896
anchor_bottom = 0.909
margin_left = -0.223999
margin_top = 0.0699406
margin_right = 0.496033
margin_bottom = 0.00483322
min_value = 100.0
max_value = 500.0
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opction4" type="Control" parent="Menu_2"]
anchor_left = -0.00575816
anchor_top = 0.531667
anchor_right = 1.0
anchor_bottom = 0.623333
margin_top = -3.05176e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_aplicar" type="Button" parent="Menu_2/opction4"]
anchor_left = 0.891
anchor_top = 0.391
anchor_right = 0.891
anchor_bottom = 0.391
margin_left = -88.884
margin_top = -13.505
margin_right = 0.116028
margin_bottom = 13.495
custom_fonts/font = SubResource( 4 )
text = "Aplicar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="Menu_1/buttons/Button_continuar" to="." method="_on_Button_continuar_pressed"]
[connection signal="pressed" from="Menu_1/buttons/Button_opcoes" to="." method="_on_Button_opcoes_pressed"]
[connection signal="pressed" from="Menu_1/buttons/Button_sair" to="." method="_on_Button_sair_pressed"]
[connection signal="value_changed" from="Menu_2/Sensibilidade/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="Menu_2/grass_distance/HSlider_v_distance" to="." method="_on_HSlider_v_distance_value_changed"]
[connection signal="pressed" from="Menu_2/opction4/Button_aplicar" to="." method="_on_Button_aplicar_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
